// Format:
// Date (mm/dd/yr)
// rNumber [Author]
// 	* Modifications.
// 	- Details.
//========================================

02/21/2010
	r206 [pakpil]
	* Fixed WL_EARTHSTRAIN that was dealing damage through walls and adjusted its behavior.

02/21/2010
	r205 [pakpil]
	* Fixed RK_MILLENNIUMSHIELD packet. Bug report 192.

02/20/2010
	r204 [pakpil]
	* Fixed some Rune Knight skill times.
	* Fixed some Shadow Chaser skill damage type that was wrong.
	* Added SC_REUSE_REFRESH as cooldown for RK_REFRESH according to the official behavior.
	* Added SC_REUSE_COMET as temproray cooldown until we find a good way to handler it.
	* Fixed Fear status change.
	* Fixed SC_STRIPACCESORY skill.

02/19/2010
	r203 [pakpil]
	* Fixed fame ranking follow up r200. Sry.
	* Fixed SC_DEADLYINFECT and SC_INVISIBILITY skills. Bug report 152.
	* Fixed Shado Chasers's Mascarades range. Bug report 152.
	* Updated SC and SI lists.
	* Optimized WM_SATURDAY_NIGHT_FEVER according to the official behavior.
	* Cleaned Unit_id enum.

02/17/2010
	r202 [pakpil]
	* Fixed SC_REPRODUCE. This was memorizing a wrong skill id on certain skills.

02/17/2010
	r201 [pakpil]
	* Minor fixed in WM_SEVERE_RAINSTORM skill.c
	* Reverted casting reduction on Bolts.

02/17/2010
	r200 [pakpil]
	* Fixed fame ranking.
	* Fixed SC_FREEZING and SC_BURNING that were stacking. We still need more info about it.

02/17/2010
	r197 [pakpil]
	* Fixed SC_REPRODUCE. Bug report 165.
	* Fixed some issues in r196 that make conflicts with cygwin.

02/16/2010
	r196 [pakpil]
	* Added some Wanderer/Minstrel skills: WM_VOICEOFSIREN, WM_DEADHILLHERE, WM_SIRCLEOFNATURE, WM_GREAT_ECHO,
		WM_SONG_OF_MANA, WM_DANCE_WITH_WUG, WM_SOUND_OF_DESTRUCTION, WM_SATURDAY_NIGHT_FEVER,
		WM_LERADS_DEW, WM_MELODYOFSINK, WM_BEYOND_OF_WARCRY, WM_UNLIMITED_HUMMING_VOICE.
	* Reverted clean up on some defines in pc_gainexp. Take care with these, if you remove it the exp gained will be